# wizards-duty-bevy-jam-6

./: Cargo.toml
assets/models/: beacon.bbmodel
assets/models/beacon/: beacon.glb  beacon.gltf
assets/shaders/: passthrough.wgsl  pixelate.wgsl
src/: assets.rs  camera.rs  main.rs  util.rs
src/arena/: beacon.rs  grid.rs  mod.rs
src/character/: aim.rs  mod.rs
src/enemy/: minion.rs  mod.rs
src/render/: mod.rs  pixelate.rs
src/spells/: damage.rs  mod.rs  phantom_blade.rs
src/weapons/: mod.rs
